@@ -2,13 +2,13 @@
 Hash: SHA256
 
 DIST Vol-1.4.4.tgz 3205621 SHA256 060e2cdd20443507b219192b26bcf8d2559cff2f3061225bb1343a9e569493be SHA512 20e04efac09694ddfa035496ec9b2920ef702e5a2ec4515cd88c52129c783efd3c25e044e6c2cec67ad800b297ebd03f3c3c377f58829790109d8d6dcb40cc39 WHIRLPOOL 01d2a07666bb7fc36eb7539e525ba095ae5efbfaee6c927f9d70d476f05815c1f0737acb6d398357ed0105913b4f4649539a3f5413a833b5e06862897ae5db8d
-EBUILD coinor-vol-1.4.4.ebuild 1861 SHA256 8136ed60bca0140b5145137a42bedd20339e4277d735bdcb35c7282145a6b4b6 SHA512 b67119ff7c68be1f8358c6bafa1307cdf7f424d92c88132e7b7dc1602a00e70c1fb12be18042dff866e73438a68827616188dd32d9b137ab0148427fe2709d01 WHIRLPOOL 035e6142837f2750ee681cb8553204b35866f8261ae2d1720ae58d97f52feb5c8b2bea7ef5fa7d0f37e60caa29cec6ee2fe0d1e70d3d9b6002a4c6ebd5bd8c26
-MISC ChangeLog 1051 SHA256 24e99131f7d6dcfc89d3a90633f6d6f710dc9879a3640c3208b256a0234982a4 SHA512 00769c4b54d36e8f4bca609a421f846d568d69bd367f267bedda056bf057f02b2486695aefe5ec43fc9bcced90e7a39d97e01fb8d84b30181ed090b30b2d64b2 WHIRLPOOL 3f6a9145e934f6ae4f04b67c2d1040b8007896a55268295be45fbadc7e7134c9bafcc47e4108d07b146a9101ed26b3d86b9a7f0fe5a5495b60e189c70daf083b
+EBUILD coinor-vol-1.4.4.ebuild 1469 SHA256 dc3aa9f1fda7e026a9db4ade52b8e30f581db6087d1454f5ec745125e22da076 SHA512 56c8eed1465170c6e0b5b3d434890b79357092b777e4a88611c845178b045968ab77aef0cfba058be55b87247f9d0ad4164f196cb32b3cf89c2f1054b557d92e WHIRLPOOL c82e13dc562e1b1a39730f967ef5f36efee7d112bdba1166273fb22b222833087291e56f8b4823834df32ced683b1dd5e99d12846d4ea53aa83b47bf722c968a
+MISC ChangeLog 1170 SHA256 dbc6c39ab7c7e509eb44009314aafcc1a5b75cbaaf8e38a1bd9768e2f8ca6241 SHA512 fe1afbaf5b6b0e4c9e487d1951f465d6f1ab2c7841861c451c1dbb85794a6e2a8f71872eefab3e56f6d33dca70a5e576b9d7a964396a1fba2e1c22c7a3308e8e WHIRLPOOL 9d4e593f278f99604d04b759ee724ae61a19736d133b2a7e7095ce56864a07b665f3d6f1ebe5fb907ea34773879b9fa5c48c576f39bffbfefdad33b9b5c5e06c
 MISC metadata.xml 406 SHA256 5dd5bef6573e12208b279cb255019ad835d4e6ea5fdafd043b96706b10173266 SHA512 6af86f09693d257f9e8c6d9746c2e1ac495964c7b87844b267a2a7e5cf748fa788c44e3c6f14a60f057ca48698242a56f14c13bcf1025c75360051c727332dd7 WHIRLPOOL 346116901119267fdeaa1e75daa0467b0a5fca04ccac3400be7209717b71366f40e2a61c5b996cc42b2438a2c8e4f6e4eba25ffe42cc58e2feac3dffed1cd748
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlLVe0sACgkQ1ycZbhPLE2COzACbBKb/3vWJJYvZKLEj/bNBgZAs
-UD8AnjEYilSQ6bh3dv51Ya2xUhkCX5Kr
-=cZ35
+iEYEAREIAAYFAlLW5xIACgkQ1ycZbhPLE2DYdgCaA9roRaycp51KvDMJ6INLnEPH
+PrIAn3lzIHowLND0U95dG5td5nPQ7TZK
+=lQkt
 -----END PGP SIGNATURE-----
