@@ -1,6 +1,9 @@
 # ChangeLog for sci-libs/coinor-vol
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-libs/coinor-vol/ChangeLog,v 1.1 2014/01/14 18:00:42 bicatali Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-libs/coinor-vol/ChangeLog,v 1.2 2014/01/15 19:52:49 bicatali Exp $
+
+  14 Jan 2014; Sébastien Fabbro <bicatali@gentoo.org> coinor-vol-1.4.4.ebuild:
+  Cleanup, as-needed applied upstream
 
 *coinor-vol-1.4.4 (14 Jan 2014)
 
